[gd_scene load_steps=4 format=3 uid="uid://bxrug0itxitl2"]

[ext_resource type="Script" path="res://Script/life_entity.gd" id="1_558md"]
[ext_resource type="Texture2D" uid="uid://h3lygj78lo6q" path="res://art/grass1.png" id="1_fmdmn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5l0oi"]
radius = 22.3607

[node name="Life entity" type="Sprite2D"]
texture = ExtResource("1_fmdmn")
centered = false
script = ExtResource("1_558md")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_5l0oi")

[node name="DebugLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 2.0
offset_right = 4.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "test"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
